--- a/thin.yml
+++ b/thin.yml
@@ -10,5 +10,5 @@ max_conns: 1024
 max_persistent_conns: 512
 require: []
 wait: 30
-user: deployer
-group: deployer
+user: deploy_megauni
+group: deploy_megauni
