--- a/thin.yml
+++ b/thin.yml
@@ -1,14 +1,3 @@
 ---
-chdir: /apps/megauni
-environment: production
-address: 0.0.0.0
 port: 4567
-timeout: 10
-log: /apps/tmp/megauni.thin.log
-pid: /apps/tmp/megauni.thin.pid
-max_conns: 1024
-max_persistent_conns: 512
-require: []
-wait: 30
-user: deploy_megauni
-group: deploy_megauni
+servers: 2
